--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,50 +16,279 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 
-<!-- ============== Start Header Area =============-->
-<header class="header_area">
-<div class="main-menu">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="mr-auto"></div>
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pottfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pages</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">contact Us</a>
-              </li>
-          </ul>
+    <!-- ============== Start Header Area =============-->
+    <header class="header_area">
+        <div class="main-menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pottfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-      </nav> 
-</div>
-</header>
-<!-- =============== End Header Area ==============-->
+    </header>
+    <!-- =============== End Header Area ==============-->
+
+
+
+    <!-- =============== Start Main Area ==============-->
+
+    <main class="site-main">
+        <!-- =============== Start banner Area ==============-->
+        <section class="site-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 site-title">
+                        <h3 class=title-text>Hey</h3>
+                        <h1 class="title-text text-uppercase"> I am Hoshan</h1>
+                        <h4 class="title-text text-uppercase"> Senior Wordpress Developer</h4>
+                        <div class="site-buttons">
+                            <div class="d-flex flex-row flex-wrap">
+                                <button type="button" class="btn button primary-button mr-4 text-uppercase"> Hire
+                                    Me</button>
+                                <button type="button" class="btn button secondary-button text-uppercase">Get Cv</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 banner-image">
+                        <img src="img/banner/banner-image.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ================ End banner Area ===============-->
+
+
+        <!-- ================ Start About Area ===============-->
+        <section class="about-area">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="about-image">
+                            <img src="img/about-us.png" alt="about us" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 about-title">
+                        <h2 class="text-uppercase pt-5">
+                            <span>Let me</span>
+                            <span>Introduce</span>
+                            <span>My self</span>
+                        </h2>
+                        <div class="paragraph py-4 w-75">
+                            <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum voluptate
+                                inventore quo quia harum! Sed quibusdam harum tempora? Rerum, quas?</p>
+                            <p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </p>
+                        </div>
+                        <button type="button" class="btn button primary-button text-uppercase"> Download Cv</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= End About Area ================-->
+
+
+        <!-- ================= Start Brand Area ================-->
+        <section class="brand-area">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-12 col-md-12">
+                        <div class="row first-row">
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo1.png" alt="Brand-1">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo2.png" alt="Brand-2">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo3.png" alt="Brand-3">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo4.png" alt="Brand-4">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo5.png" alt="Brand-5">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo6.png" alt="Brand-6">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo7.png" alt="Brand-7">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo8.png" alt="Brand-8">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="img/brands/logo9.png" alt="Brand-9">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-12 col-md-12">
+                        <div class="experience-area">
+                            <div class="dflex flex-row years-area">
+                                <h2 class="p-3 years">10</h2>
+                                <h2>
+                                    <span>Years</span>
+                                    <span>Experience</span>
+                                    <span>Working</span>
+                                </h2>
+                            </div>
+                            <div class="d-flex flex-row flex-wrap call-area">
+                                <span><i class="fas fa-phone-alt fa-3x px-3"></i></span>
+                                <div class="call-now">
+                                    <a href="#" class="text-uppercase h4 font-roboto"> call Now</a>
+                                    <span class="font-roboto py-2"> +94 713167503</span>
+                                </div>
+                            </div>
+                            <div class="bg-panel"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= End Brand Area ================-->
+
+
+
+        <!-- =============== Start Services Area ============-->
+
+        <section class="service-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center service-title">
+                        <h1 class="text-uppercase title-text"> Services Offers</h1>
+                        <p class="para">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea nam voluptates atque aliquid
+                            quisquam ipsam alias at neque accusamus non?
+                        </p>
+                    </div>
+                </div>
+                <div class="container service-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="service-img text-center py-4">
+                                    <img src="img/services/s2.png">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Wp Developer</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum numquam id
+                                        aperiam enim voluptate! Ea, voluptates facere pariatur sit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="service-img text-center py-4">
+                                    <img src="img/services/s3.png">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Web Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum numquam id
+                                        aperiam enim voluptate! Ea, voluptates facere pariatur sit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="service-img text-center py-4">
+                                    <img src="img/services/s4.png">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">SEO optimize</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum numquam id
+                                        aperiam enim voluptate! Ea, voluptates facere pariatur sit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="service-img text-center py-4">
+                                    <img src="img/services/s1.png">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Ux/Ui Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum numquam id
+                                        aperiam enim voluptate! Ea, voluptates facere pariatur sit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- =============== End Services Area ==============-->
+    </main>
+
+    <!-- =============== End Main Area ================-->
+
 
     <!--Jquery js file-->
     <script src="js/jquery.js"></script>
     <!--Bootstrap js file-->
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
